--- a/templates/suppliers/supplier_ledger.html
+++ b/templates/suppliers/supplier_ledger.html
@@ -74,7 +74,7 @@
         <div class="col-lg-6">
             <div class="glass-panel p-0 overflow-hidden h-100">
                 <div class="p-3 border-bottom bg-light bg-opacity-50">
-                    <h5 class="mb-0 fw-bold text-dark"><i class="fa-solid fa-cart-shopping me-2 text-primary"></i>Purchases (Debits)</h5>
+                    <h5 class="mb-0 fw-bold text-dark"><i class="fa-solid fa-cart-shopping me-2 text-primary"></i>Purchases</h5>
                 </div>
                 <div class="table-responsive p-3">
                     <table class="table-glass">
@@ -111,7 +111,7 @@
         <div class="col-lg-6">
             <div class="glass-panel p-0 overflow-hidden h-100">
                 <div class="p-3 border-bottom bg-light bg-opacity-50">
-                    <h5 class="mb-0 fw-bold text-dark"><i class="fa-solid fa-money-bill-wave me-2 text-success"></i>Payments (Credits)</h5>
+                    <h5 class="mb-0 fw-bold text-dark"><i class="fa-solid fa-money-bill-wave me-2 text-success"></i>Payments</h5>
                 </div>
                 <div class="table-responsive p-3">
                     <table class="table-glass">
@@ -148,5 +148,6 @@
     }
 </script>
 {% endblock %}
+
 
 
