--- a/templates/suppliers/new_payment.html
+++ b/templates/suppliers/new_payment.html
@@ -66,9 +66,10 @@
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script>
     flatpickr("#payment_date", {
-        dateFormat: "Y-m-d",
+        dateFormat: "d-m-Y",
         defaultDate: "today",
         allowInput: true
     });
 </script>
 {% endblock %}
+
