--- a/templates/purchases/new_purchase.html
+++ b/templates/purchases/new_purchase.html
@@ -83,7 +83,7 @@
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script>
     flatpickr("#purchase_date", {
-        dateFormat: "Y-m-d",
+        dateFormat: "d-m-Y",
         defaultDate: "today",
         allowInput: true
     });
@@ -95,3 +95,4 @@
 </script>
 <script src="{{ url_for('static', filename='js/purchase.js') }}"></script>
 {% endblock %}
+
