--- a/templates/purchases/edit_purchase.html
+++ b/templates/purchases/edit_purchase.html
@@ -51,8 +51,9 @@
 <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
 <script>
     flatpickr("#purchase_date", {
-        dateFormat: "Y-m-d",
+        dateFormat: "d-m-Y",
         allowInput: true
     });
 </script>
 {% endblock %}
+
