--- a/templates/purchases/new_purchase.html
+++ b/templates/purchases/new_purchase.html
@@ -104,7 +104,7 @@
 document.addEventListener("DOMContentLoaded", function () {
 
     flatpickr("#purchase_date", {
-        dateFormat: "Y-m-d",
+        dateFormat: "d-m-Y",
         defaultDate: "today",
         allowInput: true
     });
@@ -196,3 +196,4 @@ document.addEventListener("DOMContentLoaded", function () {
 </script>
 
 {% endblock %}
+
